fix(a11y): improve btns high contrast mode (#259)
* Add a border to editor buttons in HC mode

* Invert md switcher icon color when selected; fix hover

* giamir refactor

* Use disabled attr instead of .is-disabled

* Simplify btn CSS overrides further; add

Note: looks like --editor-button-border-color is never referenced and is cruft left over from when it was used to alter styles within the editor codebase (it was never exposed as an API) https://github.com/StackExchange/Stacks-Editor/commit/3568f815fe170686843ecb52e8ae559863f83d74

* Update test to check for disabled attribute

* Revert "Update test to check for disabled attribute"

This reverts commit 3b3501f919cd2642601e02b3816cf53be2476dae.

* Revert "Simplify btn CSS overrides further; add"

This reverts commit eec2b6862f216f1fed6e008778007a30c4215b42.

* Revert "Use disabled attr instead of .is-disabled"

This reverts commit 9134205ba1fce16d17825be383d2ac8f1dd4d352.

---------

--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -94,22 +94,17 @@
 
 .s-btn.s-editor-btn {
     border-radius: var(--br-sm);
-    color: var(--black-500) !important;
     padding: var(--su2);
 }
 
-.s-btn.s-editor-btn:not(.s-btn__outlined) {
-    border-color: transparent !important;
+.s-btn.s-editor-btn:hover:not(.s-btn-group .s-btn.s-editor-btn),
+.s-btn.s-editor-btn:focus:not(.s-btn-group .s-btn.s-editor-btn) {
+    background-color: var(--theme-secondary-200) !important;
+    color: var(--black-600) !important;
 }
 
 .s-btn.s-editor-btn:focus {
     box-shadow: 0 0 0 var(--su-static4) var(--focus-ring);
-}
-
-.s-btn.s-editor-btn:hover,
-.s-btn.s-editor-btn:focus {
-    background-color: var(--theme-secondary-200) !important;
-    color: var(--black-600) !important;
 }
 
 .s-btn.s-editor-btn.is-selected,
